add simple injector

--- a/Vista/Autor.resx
+++ b/Vista/Autor.resx
@@ -124,4 +124,63 @@
   <data name="autorBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing">
     <value>192, 17</value>
   </data>
+  <data name="Aceptar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAMCAYAAABr5z2BAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAYtJREFUOE9jIBUYtxlXe872XMZQz8AEFSIeGHQY1DYfa/7edqztn+sM15UkGaLX
+        oVdbeajye+2R2v81h2v+1xyo+WfQZpAFlWZgECwW1OHN41WFclGATotObcGegu8lB0r+F+8v/l+4r/B/
+        aEPoQqg0RHPCuoTb8Wvib6IbotWiVZuxI+N79p7s/5m7M/9n7Mr479fotwwoxQhWANIctTbqNkhB1u6s
+        /yErQ+CGaDRr1CVsTvieuD3xf8K2hP9x2+L++zT7rAZKQTSDgHS5dHD0xui3YEXbIYq8l3rf0GjXmBi2
+        Mex7xOaI/8Ebg/+7rXb7b1VttQ6oBTPgZGtkw4JWB70J2xT2P2RjyP+gjUH/AzYE/LdZZvNfZY7Kf5Ep
+        Iv95k3hXApUyQ3RgAVKVUmHuy93feKzx+K8zX+c/z0Se/yy9LGDMlMAEspkFohIPkK6WDuVt533O0M7w
+        H47jGTYDpVghKogBWQz+DDUMzxgagJqjGbYDRdghEqSADAY/hgIGkLM5IAK4AAMDAIC5nTU1UqyaAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
+  <data name="Agregar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAXZJREFUOE+Fk89LwzAUx3NRL+o/IR4Ub0NlaZzX0hRv+5/0MHAi6CbiHJsw8Cr+
+        D+pREQYedGnaqR2M7uDv+JJmZS4ZPvhQ+t77fl/SpGg8OrSwyH1nh/nkmvn4WeGRK+6T7a6LF3SbGbfF
+        5enAc0rQ/A3Nwgbz8Jc0F7nclJal0XbdGZh0aRPZCHxyIQdqOULgumdrjKtlEVd2jbxErlaJQ5pfgf3+
+        2JoSHogkYEZeorbqFZZQQMm+rUGShHyigYI6ZcQ9cm8tAsqAdaw1CaP4Thq8DxNx/QiWzTIG/b5iNBfX
+        DkdM8BuCr/+ZGZxWRNJ5zMgMRnLxyUFmAKfxIQ0eholxkiiELTxZaym4DUdIjs1CyiCK/jFwqij0yLq9
+        qA1g2bZaSn5V3QV4aZhFInrnTdFr1Y28BPZfU2IZL1t4DpI3402TkD9Xt7g5q+VpvLpr83CpWjbBHyhp
+        yoFaZgb3Ngqc4jOYEg1FcFIhPBuB7xDdpgOhXzhwMprNdqD9AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="Cancelar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAK9JREFUOE+dkokKwjAQROuXe+OFUAW/V+ct2WC2W0kdeJDsdCdJkyFoLQ5iZbNW
+        1LZiY7MgzJ14F2II471wvwnBPAo3HQ8BxtGvIScRTYfGrNmxkO+tL+UsJufr5SLoNc2dc46rqM2u3pCb
+        mDSj3gBuLF19yX9goRrC4J+bqCE8z+yDHgj5ufoouOvMg7uwbWRPmWY8yELcN8WPHqXmiv6z1BpR4I5T
+        U/KQVxlLw/AB2OWg0S0oCEcAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="Eliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAihJREFUOE99Uj1oU2EU/aBKrHUwrYsBSyWDcWg3IV1cEmIGwaEFLaL5sRlrtmoD
+        Un82q2l9tbUarCZROigIQQeTlg6F/uSnWQsilg4K1urUBF/Q6z0374WENh64vI/7vnO/c8+9aj84nc5W
+        t9vdefbc+V4EzsgZv/+PnoHRSydDzxdt1z9sWyPrZB3J/7WF33/vCsUWui+P9hvX9sfpqw/mjt4sVtQE
+        kdLq4hEH56yRon7KF00a1xsB8uF7W0JoHdsmNc2kJ0ZMER0a+yGFjtzdJMeVh68MWhWQLS8z+djkDr3L
+        fabAyzVSMSZzhJJ5erO8QR3aTyliHVnXewZu9QkZ5qBnSDw4sUuvM3kCKpUK+eOrFEysyhlIpHPUMr5L
+        apzIfm163uv1WhQchmHSK8sOJgo1Qrlcli+g6zr5E0VpB4/ZwqlvHo/nhMKY4LYUQL8sGS+bRQCcfWjp
+        Gf9HAW6jfTj7x+VynakW4FHVF6iXDUiBeJMC0gLPWUbFP2GYSS6VSvIFkAvGC6Qe8z1u4fhQ6qu0ABO7
+        grEFJA+wQclMoUaAbLxsFpz9mKeWqGFiYCYtJgLYMCwJVHRoO/R25RP5XmSrkjlg7NzSBrVrv6oLdSP3
+        u/ti5IKQTWDD2u5sSn8WLA16NYNlW+5zjsltt7+QwxedNWiNwIZhSSARl8UXBM6cw8tNySawYfbBp/OY
+        M5xGwDB7YCq9R3YzwBw4jDEhcK4Z1gCl/gGkKeB5xfH3CgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="modificar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAN1JREFUOE+V0jEOwWAAxfFiFeIWDAYRDIhLGCw4gs0gYXYDVzC4gyMYnICQGAmL
+        Bf/3RZum+fq1fckv6Vfeq8D7p4ORQwl+6uihYE5E5a/DEn7KuEH398jDPEE3zthGzOCniymqOEEdPTwY
+        UCEu+shP6H0baOSCGhIHwmXfGEWYuAZUfiFcvqOFIHEDfbjKOVR0YRuwlR9oQ1F5jaEOtoEV4srKHLpv
+        HThigAlsZWWH2AFdv6GRBcxvHUnigBzMyR7nQJpYB/TP0gtpXBEM6AvSIasPGjBpQmtZUPa8Hx8FeJZ4
+        eUOIAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
